--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "joi": "^17.9.2",
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.5",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.10.0",
