--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "export STAGE=local && nest start",
     "start:dev": "export STAGE=local && nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
