--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "ts-node ./node_modules/typeorm/cli",
+    "typeorm:prod": "node ./node_modules/typeorm/cli.js",
+    "prod:migration:run": "npm run typeorm:prod migration:run -- -d ./dist/src/config/migration.js",
     "migration:run": "npm run typeorm migration:run -- -d ./src/config/migration.ts",
     "migration:generate": "npm run typeorm -- -d ./src/config/migration.ts migration:generate ./migration/$npm_config_name",
     "migration:create": "npm run typeorm -- migration:create ./migration/$npm_config_name",
