--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "seeder:revert": "npm run typeorm -- -d ./src/config/seeder.ts migration:revert"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.0.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
@@ -38,6 +39,7 @@
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
+    "@nestjs/terminus": "^10.1.1",
     "@nestjs/typeorm": "^9.0.1",
     "aws-sdk": "^2.1488.0",
     "bcrypt": "^5.1.0",
